продолжение переноса user